--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ billiard==3.5.0.3
 celery==4.1.0
 certifi==2017.7.27.1
 chardet==3.0.4
+dj-database-url==0.4.2
 Django==1.11.5
 django-paypal==0.4.1
 gunicorn==19.7.1
